# save

./: .gitignore  Cargo.toml  README.md  README.txt  example.html  rustfmt.toml  save
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: benches.rs  criterion.rs  iai.rs
examples/: brute_force.rs  generation.rs
scripts/: README.md  pre-release  readme  test-repos
src/: cli.rs  ez.rs  git.rs  git2.rs  git_ext.rs  hex.rs  lib.rs  main.rs  testing.rs  util.rs  zigzag.rs
src/zigzag/: test.rs  zigzag.txt  zigzag_u8.txt  zugzug.txt  zugzug_u8.txt
test_repos/: README.md
tests/: cli.rs  git2.rs  git_ext.rs  hex.rs  readme.rs  usage-long.txt  usage-short.txt  usage.rs  zigzag.rs  zigzag.txt
