[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
default-run = "save"
description = "Would you like to SAVE the change?"
edition = "2021"
homepage = "https://lib.rs/save"
license = "MIT OR Apache-2.0"
name = "save"
repository = "https://github.com/jeremyBanks/save"
version = "0.6.0-dev.1"

[dependencies]
clap = { features = ["derive", "env", "cargo", "unicode", "wrap_help"], version = "3.0.7" }
color-eyre = "0.6.0"
digest = "0.10.1"
eyre = "0.6.5"
git2 = "0.13.25"
hex = "0.4.3"
home = "0.5.3"
itertools = "0.10.3"
petgraph = "0.6.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
rayon = "1.5.1"
sha-1 = "0.10.0"
sha2 = "0.10.1"
tempfile = "3.3.0"
thiserror = "1.0.30"
thousands = "0.2.0"
tracing = { features = ["log"], version = "0.1.29" }
tracing-error = { features = ["traced-error"], version = "0.2.0" }
tracing-subscriber = { features = ["env-filter"], version = "0.3.6" }
typenum = "1.15.0"

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[dev-dependencies]
criterion = { features = ["html_reports"], version = "0.3.5" }
crossterm = "0.22.1"
iai = "0.1.1"

[package.metadata.release]
allow-branch = ["trunk"]
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["scripts/pre-release"]
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=all"]
