[package]
default-run = "save"
description = "Would you like to SAVE the change?"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "save"
version = "0.7.0-dev.0"

[dependencies]
clap = { features = ["derive", "env", "cargo", "unicode", "wrap_help"], version = "3.2.6" }
color-eyre = "0.6.1"
digest = "0.10.3"
eyre = "0.6.8"
git2 = "0.14.4"
home = "0.5.3"
itertools = "0.10.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
num_cpus = "1.13.1"
once_cell = "1.12.0"
parking_lot = "0.12.1"
petgraph = "0.6.2"
sha-1 = "0.10.0"
tempfile = "3.3.0"
thiserror = "1.0.31"
thousands = "0.2.0"
tracing = { features = ["log"], version = "0.1.35" }
tracing-error = { features = ["traced-error"], version = "0.2.0" }
tracing-subscriber = { features = ["env-filter"], version = "0.3.11" }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[dev-dependencies]
criterion = { features = ["html_reports"], version = "0.3.5" }
crossterm = "0.23.2"
expect-test = "1.3.0"
iai = "0.1.1"
plotlib = "=0.5.1"
rand = "0.8.5"
rand_pcg = "0.3.1"

[package.metadata.release]
allow-branch = ["trunk"]
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["scripts/pre-release"]
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=all"]
