[package]
default-run = "save"
description = "Would you like to SAVE the change?"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "save"
version = "0.20220708.0"

[dependencies]
bstr = "0.2.17"
clap = { features = ["derive", "env", "cargo", "unicode", "wrap_help"], version = "3.2.8" }
color-eyre = "0.6.1"
digest = "0.10.3"
expect-test = { version = ">=1.3.0", git = "https://github.com/jeremyBanks/expect-test", rev = "bf056e6c5cd3baed9ad2ef3d30bc06dad2778089" }
eyre = "0.6.8"
git2 = "0.14.4"
home = "0.5.3"
itertools = "0.10.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
num_cpus = "1.13.1"
once_cell = "1.13.0"
parking_lot = "0.12.1"
petgraph = "0.6.2"
sha-1 = "0.10.0"
tempfile = "3.3.0"
thiserror = "1.0.31"
thousands = "0.2.0"
tracing = { features = ["log"], version = "0.1.35" }
tracing-error = { features = ["traced-error"], version = "0.2.0" }
tracing-subscriber = { features = ["env-filter"], version = "0.3.14" }

[dev-dependencies]
criterion = { features = ["html_reports"], version = "0.3.5" }
crossterm = "0.24.0"
iai = "0.1.1"
rand = "0.8.5"
rand_pcg = "0.3.1"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[package.metadata.release]
allow-branch = ["trunk"]
post-release-commit-message = "v{{next_version}}"
pre-release-commit-message = "v{{version}}"
tag-message = "https://crates.io/crates/{{crate_name}}/{{version}}"
tag-name = "{{version}}"
